# vc2

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Quad.cpp  Quad.hpp  README.md  Shader.cpp  Texture.cpp  Texture.hpp  TextureShader.frag  main.cpp
build_debug/: ALL_BUILD.vcxproj  CMakeCache.txt  OpenCVLab.sln  OpenCVLab.vcxproj  OpenCVLab.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_debug/Debug/: TextureShader.vert
build_debug/OpenCVLab.dir/Debug/: OpenCVLab.exe.recipe  OpenCVLab.ilk
build_debug/OpenCVLab.dir/Debug/OpenCVLab.tlog/: CL.write.1.tlog  (+5 more)
build_debug_lowres/: ALL_BUILD.vcxproj  CMakeCache.txt  OpenCVLab.sln  OpenCVLab.vcxproj  OpenCVLab.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_debug_lowres/Debug/: TextureShaderPixelate.frag
build_debug_lowres/OpenCVLab.dir/Debug/: OpenCVLab.exe.recipe  OpenCVLab.ilk
build_release/: ALL_BUILD.vcxproj  CMakeCache.txt  OpenCVLab.sln  OpenCVLab.vcxproj  OpenCVLab.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_release/OpenCVLab.dir/Debug/: OpenCVLab.exe.recipe  OpenCVLab.ilk
build_release/OpenCVLab.dir/Release/: OpenCVLab.exe.recipe
build_release/Release/: TextureShader.frag  TextureShaderBW.frag
build_release_lowres/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OpenCVLab.sln  OpenCVLab.vcxproj  OpenCVLab.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_release_lowres/OpenCVLab.dir/Release/: OpenCVLab.exe.recipe
(+56 files in other folders)
